# subwhisper

./: .gitignore  Dockerfile  Getting_Started_Guide.md  README.md  api.py  audio_backend.py  auth.py  auth.yaml  batch_whisperx.py  corrections.py  docker-compose.yml  environment.yml  experiment.py  experiment_runner.py  format_subtitles.py  generateSubtitles.py  maintenance.py  preproc.py  pyproject.toml  qc.py  requirements.txt  rerun_failed.py  rollback.py  run_state.py  subtitle_pipeline.py  subtitles.srt  subtitles.txt  subwhisper_cli.py  transcribe.py  vad.py
.github/workflows/: tests.yml
airflow/: pipeline_dag.py
docs/: airflow.md  deployment.md  release-notes.md  review_workflow.md
metrics/: pipeline_metrics.json
noisereduce/: __init__.py
preproc/: audio.srt  denoised.srt  music_segments.json
sample/: One Pace - S09E01 - Reverse Mountain.srt  normalized.srt
scripts/: smoke_test.sh
tests/: conftest.py  test_api.py  test_api_review.py  test_audio_backend.py  test_batch_whisperx.py  test_corrections.py  test_enforce_limits.py  test_experiment.py  test_format_subtitles.py  test_generate_subtitles.py  test_maintenance.py  test_mlflow.py  test_preproc.py  test_qc.py  test_resume.py  test_rollback.py  test_spellcheck_lines.py  test_subtitle_pipeline.py  test_subwhisper_cli.py  test_transcribe.py
transcript/: segments.json  transcript.json
