[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subwhisper"
version = "0.1.0"
description = "Subtitle generation using Faster-Whisper"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Subwhisper Contributors"}]
dependencies = [
    "ctranslate2>=4.4,<5",
    "faster-whisper>=1.2,<2",
    "numpy>=1.26,<3",
    "pysubs2>=1.8.0",
    "librosa>=0.10",
    "noisereduce>=3.0",
    "soundfile>=0.12",
    "packaging",
    "rich",
    "jiwer>=3.0",
    "pyyaml",
    "language_tool_python",
    "aeneas>=1.7.3",
    "fastapi",
    "uvicorn",
]

[project.scripts]
"subwhisper-cli" = "subwhisper_cli:main"
